# Translator

./: CMakeLists.txt  database.cpp  database.h  enum.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  quise.cpp  quise.h  translator.cpp  translator.h
